# aiembodied-ha

./: .gitignore  .gitlab-ci.yml  AGENTS.md  LICENSE  PRD.md  README.md  pyproject.toml  requirements-dev.txt  voluptuous.py
.github/: dependabot.yml
aiohttp/: __init__.py
custom_components/aiembodied/: __init__.py  api_client.py  autonomy.py  binary_sensor.py  config_flow.py  const.py  conversation.py  exposure.py  manifest.json  sensor.py  switch.py
homeassistant/: __init__.py  config_entries.py  const.py  core.py  data_entry_flow.py  exceptions.py
homeassistant/components/: __init__.py  conversation.py
homeassistant/helpers/: __init__.py  aiohttp_client.py  event.py  typing.py
tests/: conftest.py  test_api_client.py  test_autonomy.py  test_config_flow.py  test_conversation.py  test_exposure.py  test_init.py
